--- a/Downstream/conf/config.yaml
+++ b/Downstream/conf/config.yaml
@@ -11,7 +11,7 @@ defaults:
 wandb_log: true
 wandb_project: "BRAIN_NAT"
 wandb_entity: "nyu_brain_decoding"
-model_name: "testing"
+model_name: "main_prior"
 
 instance_dir: "outputs/${model_name}/${now:%Y-%m-%d_%H-%M-%S}"
 hydra:
