--- a/Downstream/conf/model/main.yaml
+++ b/Downstream/conf/model/main.yaml
@@ -3,28 +3,25 @@
 # ------------------------------------------------------------------------------
 
 
-# Whether to use the diffusion prior (True) or just retrieval (False)
-use_prior: false
-blurry_recon: false
 
 # Architecture hyperparams
 n_blocks: 4
-decoder_hidden_dim: 1024
-encoder_hidden_dim: 1024
+decoder_hidden_dim: 1280
+encoder_hidden_dim: 256
 use_mixer: false
-num_heads: 4
-tome_r: 2000
+num_heads: 8
+tome_r: 1000
 last_n_features: 16
-nat_depth: 2
+nat_depth: 8
 nat_num_neighbors: 8
-full_attention: false
-n_blocks_decoder: 4
+full_attention: true
+n_blocks_decoder: 6
 
 # Dropout and progressive-dim scaling
 drop: 0.1
-progressive_dims: false
+progressive_dims: true
 initial_tokens: 15000
-dim_scale_factor: 1.0
+dim_scale_factor: 0
 
 # output
 clip_seq_dim: 256
