--- a/Downstream/conf/model/main.yaml
+++ b/Downstream/conf/model/main.yaml
@@ -3,7 +3,7 @@
 # ------------------------------------------------------------------------------
 
 # Decoder type
-decoder_type: 'perceiver'  # Options: 'qformer', 'perceiver'
+decoder_type: 'qformer'  # Options: 'qformer', 'perceiver'
 
 # Architecture hyperparams
 n_blocks: 4
