--- a/Downstream/conf/model/main.yaml
+++ b/Downstream/conf/model/main.yaml
@@ -2,6 +2,9 @@
 # Model-related hyperparameters and configurations
 # ------------------------------------------------------------------------------
 
+# Encoder type (Used with qformer decoder)
+encoder_type: 'linformer'
+
 # Decoder type
 decoder_type: 'qformer'  # Options: 'qformer', 'perceiver'
 
