--- a/Downstream/conf/model/main.yaml
+++ b/Downstream/conf/model/main.yaml
@@ -6,7 +6,7 @@
 encoder_type: 'linformer'
 
 # Decoder type
-decoder_type: 'qformer'  # Options: 'qformer', 'perceiver'
+decoder_type: 'perceiver'  # Options: 'qformer', 'perceiver'
 
 # Architecture hyperparams
 n_blocks: 4
