--- a/Downstream/conf/data/main.yaml
+++ b/Downstream/conf/data/main.yaml
@@ -8,10 +8,10 @@ cache_dir: "/scratch/cl6707/Shared_Datasets/NSD_MindEye/Mindeye2"
 
 # Subject and session info
 subj: 2
-num_sessions: 1
+num_sessions: 40
 
 # Multi-subject (list of subject IDs)
-multi_subject: [2]
+multi_subject: [2, 3, 4, 5, 6, 7, 8]
 
 # Whether to use the new test set
 new_test: true
