--- a/Downstream/conf/model/main.yaml
+++ b/Downstream/conf/model/main.yaml
@@ -3,10 +3,10 @@
 # ------------------------------------------------------------------------------
 
 # Encoder type (Used with qformer decoder)
-encoder_type: 'linformer'
+encoder_type: 'tomer'
 
 # Decoder type
-decoder_type: 'perceiver'  # Options: 'qformer', 'perceiver'
+decoder_type: 'qformer'  # Options: 'qformer', 'perceiver'
 
 # Perceiver variant type
 perceiver_type: 'variable'  # Options: 'original', 'hierarchical', 'variable'
@@ -19,8 +19,8 @@ encoder_seq_len: 2048 # New parameter for linformer
 share_kv: False # New parameter for linformer
 use_mixer: false
 num_heads: 8
-head_dim: 128  # New parameter for Perceiver
-self_per_cross_attn: 2  # New parameter for Perceiver
+head_dim: 64  # New parameter for Perceiver
+self_per_cross_attn: 1  # New parameter for Perceiver
 use_avg_pool: false   # New parameter for Perceiver
 mlp_clip_head: false
 tome_r: 1000
@@ -28,7 +28,7 @@ last_n_features: 16
 nat_depth: 8
 nat_num_neighbors: 8
 full_attention: true
-n_blocks_decoder: 8
+n_blocks_decoder: 10
 
 # Hierarchical Perceiver parameters
 downsample_factors: [2, 2, 2, 2]  # Controls token reduction at each level
